--- a/dist.ini
+++ b/dist.ini
@@ -5,3 +5,7 @@ copyright_holder = Randy Stauner
 copyright_year   = 2013
 
 [@Author::RWSTAUNER]
+
+[Prereqs]
+; not actually used but the plugin likely won't work properly without it
+Dist::Zilla::Plugin::Bootstrap::lib = 0
