--- a/dist.ini
+++ b/dist.ini
@@ -5,7 +5,9 @@ copyright_holder = Randy Stauner
 copyright_year   = 2013
 
 [@Author::RWSTAUNER]
+-remove = Test::Synopsis
 
 [Prereqs]
+Dist::Zilla = 4
 ; not actually used but the plugin likely won't work properly without it
 Dist::Zilla::Plugin::Bootstrap::lib = 0
