--- a/dist.ini
+++ b/dist.ini
@@ -11,3 +11,6 @@ copyright_year   = 2013
 Dist::Zilla = 4
 ; not actually used but the plugin likely won't work properly without it
 Dist::Zilla::Plugin::Bootstrap::lib = 0
+
+[%PodWeaver]
+-StopWords.include = INI PluginBundles
