--- a/dist.ini
+++ b/dist.ini
@@ -9,6 +9,9 @@ copyright_year   = 2013
 
 [Prereqs]
 Dist::Zilla = 4
+
+Config::MVP::Writer::INI = 0.003
+
 ; not actually used but the plugin likely won't work properly without it
 Dist::Zilla::Plugin::Bootstrap::lib = 0
 
